crates/glyph-cli/tests/corpus/invalid/flow_assign_redecl_self.glyph
block inspect_repo(scope = ".") -> Report
    description: "Inspect the repo."
    flow:
        "Examine {scope}."
        return context

skill diagnose(scope = ".") -> Report
    description: "Same name bound twice in the same scope."
    flow:
        ctx = inspect_repo(scope)
        ctx = inspect_repo(scope)
        return ctx
